<resources>
    <string name="app_name">Signupform</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="usernamehint">Please enter your username</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="passwordhint">Please enter your password</string>
    <string name="confirmpass">Confirm Password:</string>
    <string name="confirmpasshint">Please confirm your password</string>
</resources>
